# cardinal

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  cardinal.h
cardinal/: Cargo.toml  README.md
cardinal-sdk/: Cargo.toml
cardinal-sdk/src/: event.rs  event_flag.rs  event_stream.rs  lib.rs  main.rs  utils.rs
cardinal/src/: App.css  App.jsx  App.tsx  consts.rs  theme.ts  utils.rs
cardinal/src-tauri/: Cargo.toml  tauri.conf.json
cardinal/src-tauri/icons/: icon.icns
cardinal/src-tauri/src/: background.rs  commands.rs  lib.rs
cardinal/src/components/: FSEventsPanel.jsx  FSEventsPanel.tsx  FileRow.jsx  FileRow.tsx  StateDisplay.tsx  StatusBar.css  StatusBar.jsx  StatusBar.tsx  VirtualList.jsx  VirtualList.tsx
cardinal/src/constants/: index.js
cardinal/src/hooks/: index.js  useDataLoader.js  useDataLoader.ts  useFileSearch.ts  useRecentFSEvents.ts  useScrollbarSync.js
cardinal/src/i18n/: config.ts
cardinal/src/types/: ipc.ts  search.ts  slab.ts
doc/: TODO.md  todo.md
examples/: tree.rs
fs-icon/src/: lib.rs
fswalk/: Cargo.toml
fswalk/src/: lib.rs  type_and_size.rs
lsf/: Cargo.toml
lsf/src/: cache.rs  main.rs
namepool/src/: lib.rs
pathbytes/: Cargo.toml  README.md
pathbytes/src/: lib.rs
query-segmentation/: Cargo.toml
search-cache/: Cargo.toml
search-cache/src/: cache.rs  lib.rs  metadata_cache.rs  name_index.rs  persistent.rs  slab.rs  slab_node.rs  tests_extra.rs
search-cancel/src/: lib.rs
src/: fsevent.rs  fsevent_flags.rs  fsevent_pb.proto  lib.rs  main.rs
src/fs_entry/: mod.rs  tests.rs
was/src/: main.rs
(+2 files in other folders)
