[package]
name = "cardinal-sdk"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
tokio = { version = "1.17.0", features = ["full"] }
bitflags = "2.9.0"
# fsevent-sys = "4.1.0"
fsevent-sys.git = "https://github.com/ldm0/fsevent-rust"
chrono = "0.4.41"
core-foundation = { version = "0.9.2", features = ["mac_os_10_8_features"] }
dispatch2 = { version = "0.2.0", default-features = true, features = ["alloc"] }
libc = "0.2.171"

[dev-dependencies]
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
